feat(): add slides about sync

--- a/index.html
+++ b/index.html
@@ -118,7 +118,20 @@
         </div></div>
         <div class="sl-block" data-block-type="text" style="width: 806px; left: 80px; top: 483px; height: auto;" data-block-id="fe51fa7106562c9e78fea6eff964ee63"><div class="sl-block-content" data-placeholder-tag="h2" data-placeholder-text="Subtitle" style="z-index: 13;">
             <h2><span style="color:#FF0000">La version Chrome app est dépréciée</span></h2>
-        </div></div></section></section><section class="stack" data-id="db6f47e9eb7333271448ce953296f831"><section data-id="cd49f8c2075ae9ececc7548846fbc5b0" data-background-color="#a64d79"><div class="sl-block" data-block-type="text" style="width: 806px; left: 77px; top: 266px; height: auto;" data-block-id="a4352599e6d52282da43194fd4ea699c"><div class="sl-block-content" data-placeholder-tag="h1" data-placeholder-text="Title Text" style="z-index: 10;">
+        </div></div></section><section data-id="64042fa6db9e39727e48b164b3282585">
+        <div class="sl-block" data-block-type="text" style="width: 806px; left: 77px; top: 189px; height: auto;"
+             data-block-id="aa535bbbf3225577e1ce31f9e9bff796">
+            <div class="sl-block-content" data-placeholder-tag="h1" data-placeholder-text="Title Text" style="z-index: 10;">
+                <h1>Conseil</h1>
+            </div>
+        </div>
+        <div class="sl-block" data-block-type="text" style="width: 806px; left: 80px; top: 350px; height: auto;"
+             data-block-id="d66d4e0ecab4cf29ab5989c3b27028e9">
+            <div class="sl-block-content" data-placeholder-tag="h2" data-placeholder-text="Subtitle" style="z-index: 11;">
+                <h2>Créez un compte pour synchroniser automatiquement vos collections !</h2>
+            </div>
+        </div>
+    </section></section><section class="stack" data-id="db6f47e9eb7333271448ce953296f831"><section data-id="cd49f8c2075ae9ececc7548846fbc5b0" data-background-color="#a64d79"><div class="sl-block" data-block-type="text" style="width: 806px; left: 77px; top: 266px; height: auto;" data-block-id="a4352599e6d52282da43194fd4ea699c"><div class="sl-block-content" data-placeholder-tag="h1" data-placeholder-text="Title Text" style="z-index: 10;">
         <h1>Vocabulaire &amp;<br>
             Organisation des requêtes</h1>
     </div></div></section><section data-id="a7648a99d964a1d3e62f3a37ccb13a39" data-background-color="#a64d79"><div class="sl-block" data-block-type="text" style="width: 773px; left: 27px; top: 80px; height: auto;" data-block-id="b779dc4303fdbf12256972b4b3bdf608"><div class="sl-block-content" data-placeholder-tag="h2" data-placeholder-text="Title Text" style="z-index: 11;">
